# hypr-recorder

./: .gitignore  AGENTS.md  Cargo.toml  INSTALL.md  README.md  build.sh  flake.nix
src/: audio.rs  error.rs  input.rs  main.rs  notification.rs  recorder.rs  transcriber.rs  utils.rs
src/audio/: mod.rs  recorder.rs
src/input/: keybind.rs  mod.rs
src/notification/: mod.rs  progress.rs
