[package]
name = "hypr-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
hound = "3.5"
input = "0.9.1"
tempfile = "3.8"
thiserror = "2.0.16"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
