[package]
name = "hypr-recorder"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }
gstreamer = { version = "0.24" }
input = "0.9.1"
libc = "0.2"
tempfile = "3.8"
thiserror = "2.0.16"
tokio = { version = "1.0", default-features = false, features = [
  "fs",
  "macros",
  "process",
  "rt-multi-thread",
  "time",
] }
